--- a/RRQMColorPicker/MainWindow.xaml
+++ b/RRQMColorPicker/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RRQMColorPicker"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" Height="450" Width="800" Style="{DynamicResource WindowStyle}">
+    <Grid Width="100" Height="100" Background="Red">
+        <ResizeGrip/>
     </Grid>
 </Window>
